src/objects/ProgramRequiredOffers__c.object
<CustomObject>
    <fields>
        <fullName>created_at__c</fullName>
        <label>created_at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>deal_id__c</fullName>
        <label>deal_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>program_id__c</fullName>
        <label>program_id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>updated_at__c</fullName>
        <label>updated_at</label>
        <type>DateTime</type>
    </fields>
    <label>ProgramRequiredOffer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProgramRequiredOffers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProgramRequiredOffers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>